--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "icomoon";
-  src: url("../fonts/icomoon.eot?mrghzi");
-  src: url("../fonts/icomoon.eot?mrghzi#iefix") format("embedded-opentype"), url("../fonts/icomoon.woff2?mrghzi") format("woff2"), url("../fonts/icomoon.ttf?mrghzi") format("truetype"), url("../fonts/icomoon.woff?mrghzi") format("woff"), url("../fonts/icomoon.svg?mrghzi#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?x9vuvh");
+  src: url("../fonts/icomoon.eot?x9vuvh#iefix") format("embedded-opentype"), url("../fonts/icomoon.woff2?x9vuvh") format("woff2"), url("../fonts/icomoon.ttf?x9vuvh") format("truetype"), url("../fonts/icomoon.woff?x9vuvh") format("woff"), url("../fonts/icomoon.svg?x9vuvh#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -47,6 +47,10 @@
 
 .icon-online-pay:before {
   content: "\e917";
+}
+
+.icon-delete:before {
+  content: "\e91c";
 }
 
 .icon-contact-msg:before {
