--- a/css/scss/components/_header.scss
+++ b/css/scss/components/_header.scss
@@ -61,6 +61,13 @@ header {
             width: 50%;
           }
         }
+        &.active {
+          font-weight: 700;
+          color: $blue;
+          &:after {
+            width: 50%;
+          }
+        }
       }
 
       &:last-child {
