--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "icomoon";
-  src: url("../fonts/icomoon.eot?mrghzi");
-  src: url("../fonts/icomoon.eot?mrghzi#iefix") format("embedded-opentype"), url("../fonts/icomoon.woff2?mrghzi") format("woff2"), url("../fonts/icomoon.ttf?mrghzi") format("truetype"), url("../fonts/icomoon.woff?mrghzi") format("woff"), url("../fonts/icomoon.svg?mrghzi#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?x9vuvh");
+  src: url("../fonts/icomoon.eot?x9vuvh#iefix") format("embedded-opentype"), url("../fonts/icomoon.woff2?x9vuvh") format("woff2"), url("../fonts/icomoon.ttf?x9vuvh") format("truetype"), url("../fonts/icomoon.woff?x9vuvh") format("woff"), url("../fonts/icomoon.svg?x9vuvh#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -47,6 +47,10 @@
 
 .icon-online-pay:before {
   content: "\e917";
+}
+
+.icon-delete:before {
+  content: "\e91c";
 }
 
 .icon-contact-msg:before {
@@ -479,6 +483,13 @@ header .navigation li a:after {
   transition: all 0.3s ease;
 }
 header .navigation li a:hover:after {
+  width: 50%;
+}
+header .navigation li a.active {
+  font-weight: 700;
+  color: #0601ff;
+}
+header .navigation li a.active:after {
   width: 50%;
 }
 header .navigation li:last-child {
@@ -1752,6 +1763,23 @@ Size Guide Page CSS Start
 .storage-calculator-section .bed-room-content .bed-description {
   margin-top: 20px;
 }
+.storage-calculator-section .clean-selection {
+  margin-top: 20px;
+  padding: 20px;
+  border: 1px solid #bfbfbf;
+  border-radius: 8px;
+}
+.storage-calculator-section .clean-selection a {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  font-weight: 500;
+  color: #828282;
+}
+.storage-calculator-section .clean-selection a i {
+  color: #f3b300;
+  margin-right: 10px;
+}
 
 /** == Storage Calculator Section CSS End == **/
 /** ========================= 
@@ -1826,6 +1854,11 @@ Size Guide Page CSS End
   }
   .storage-calculator-section {
     padding-bottom: 50px;
+  }
+  .storage-calculator-section .category ul.nav {
+    display: flex;
+    flex-wrap: unset;
+    overflow-x: auto;
   }
   .storage-calculator-section .category-details .single-unit .store-size {
     display: block;
