done basic thing

--- a/css/scss/components/_feature.scss
+++ b/css/scss/components/_feature.scss
@@ -4,7 +4,7 @@
     position: relative;
     padding: 60px 30px;
     border-radius: 12px;
-    color: $yellow !important;
+    color: #f3b200be;
     background-color: $yellow-normal;
     transition: 0.2s;
 
