--- a/css/style.css
+++ b/css/style.css
@@ -522,7 +522,7 @@ header {
   position: relative;
   padding: 60px 30px;
   border-radius: 12px;
-  color: #f3b300 !important;
+  color: #f3b200be;
   background-color: #fff7e2;
   transition: 0.2s; }
   .feature-section .single-feature:hover {
@@ -955,7 +955,11 @@ Unit Prices Page CSS Start
 
 /** == CTA CSS End == **/
 .testimonial-modal .modal-dialog {
-  max-width: 570px; }
+  max-width: 570px;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  margin: 0 auto; }
   .testimonial-modal .modal-dialog .modal-content {
     padding: 50px;
     border-radius: 15px; }
@@ -1062,7 +1066,11 @@ Unit Prices Page CSS Start
           font-size: 14px; }
 
 .call-modal .modal-dialog {
-  max-width: 744px; }
+  max-width: 744px;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  margin: 0 auto; }
   .call-modal .modal-dialog .modal-content {
     padding: 30px;
     border-radius: 15px; }
@@ -1253,82 +1261,86 @@ Unit Prices Page CSS End
         font-size: 16px;
         background-color: #f4f3ff; }
 
-  .testimonial-modal .modal-dialog .modal-content {
+  .testimonial-modal .modal-dialog {
     padding: 20px; }
-    .testimonial-modal .modal-dialog .modal-content .modal-body {
-      padding: 0; }
-      .testimonial-modal .modal-dialog .modal-content .modal-body .rating {
-        margin-top: -20px; }
-        .testimonial-modal .modal-dialog .modal-content .modal-body .rating p i {
-          font-size: 20px; }
-      .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field {
-        margin-top: 0; }
-        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field label {
-          margin-top: 10px;
-          font-size: 14px; }
-        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field input,
-        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field select,
-        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field textarea {
-          margin-top: 7px;
-          padding: 7px 15px; }
-          .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field input option,
-          .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field select option,
-          .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field textarea option {
-            padding: 15px 0; }
-      .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .form-alert {
-        margin: 10px 0; }
-        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .form-alert p {
-          font-size: 14px; }
+    .testimonial-modal .modal-dialog .modal-content {
+      padding: 20px; }
+      .testimonial-modal .modal-dialog .modal-content .modal-body {
+        padding: 0; }
+        .testimonial-modal .modal-dialog .modal-content .modal-body .rating {
+          margin-top: -20px; }
+          .testimonial-modal .modal-dialog .modal-content .modal-body .rating p i {
+            font-size: 20px; }
+        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field {
+          margin-top: 0; }
+          .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field label {
+            margin-top: 10px;
+            font-size: 14px; }
+          .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field input,
+          .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field select,
+          .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field textarea {
+            margin-top: 7px;
+            padding: 7px 15px; }
+            .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field input option,
+            .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field select option,
+            .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field textarea option {
+              padding: 15px 0; }
+        .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .form-alert {
+          margin: 10px 0; }
+          .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .form-alert p {
+            font-size: 14px; }
 
-  .call-modal .modal-dialog .modal-content {
+  .call-modal .modal-dialog {
     padding: 20px; }
-    .call-modal .modal-dialog .modal-content .modal-header {
-      padding: 0 10px 15px; }
-    .call-modal .modal-dialog .modal-content .modal-body {
-      padding: 15px 10px; }
-      .call-modal .modal-dialog .modal-content .modal-body .selected-item {
-        margin: 15px 0;
-        padding: 10px; }
-        .call-modal .modal-dialog .modal-content .modal-body .selected-item p {
-          font-size: 14px; }
-          .call-modal .modal-dialog .modal-content .modal-body .selected-item p.common-pl {
-            padding-left: 0; }
-        .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content h5 {
-          padding-top: 15px;
-          padding-bottom: 15px;
-          margin-bottom: 0; }
-          .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content h5.common-pl {
-            padding-left: 0; }
-        .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content .heading-size {
-          position: relative;
-          width: 100%;
-          display: block; }
-          .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content .heading-size h5.size::after {
-            content: "";
-            position: absolute;
-            top: unset;
-            right: unset;
-            bottom: 10px;
-            left: 0;
+    .call-modal .modal-dialog .modal-content {
+      padding: 15px; }
+      .call-modal .modal-dialog .modal-content .modal-header {
+        padding: 0 10px 15px; }
+      .call-modal .modal-dialog .modal-content .modal-body {
+        padding: 15px 10px; }
+        .call-modal .modal-dialog .modal-content .modal-body .selected-item {
+          margin: 15px 0;
+          padding: 10px; }
+          .call-modal .modal-dialog .modal-content .modal-body .selected-item p {
+            font-size: 14px; }
+            .call-modal .modal-dialog .modal-content .modal-body .selected-item p.common-pl {
+              padding-left: 0; }
+          .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content h5 {
+            padding-top: 15px;
+            padding-bottom: 15px;
+            margin-bottom: 0; }
+            .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content h5.common-pl {
+              padding-left: 0; }
+          .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content .heading-size {
+            position: relative;
             width: 100%;
-            height: 1px;
-            background-color: #bfbfbf; }
-        .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content .price {
-          display: block;
-          width: 100%;
-          text-align: center; }
-        .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.one, .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.two {
-          position: relative; }
-          .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.one::after, .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.two::after {
-            content: "";
-            position: absolute;
-            top: 0;
-            right: 0;
-            width: 1px;
-            height: 100%;
-            background-color: #828282; }
-      .call-modal .modal-dialog .modal-content .modal-body .phone-number {
-        margin-top: 20px; }
+            display: block; }
+            .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content .heading-size h5.size::after {
+              content: "";
+              position: absolute;
+              top: unset;
+              right: unset;
+              bottom: 10px;
+              left: 0;
+              width: 100%;
+              height: 1px;
+              background-color: #bfbfbf; }
+          .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content .price {
+            display: block;
+            width: 100%;
+            text-align: center; }
+          .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.one, .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.two {
+            position: relative; }
+            .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.one::after, .call-modal .modal-dialog .modal-content .modal-body .selected-item .selected-content.two::after {
+              content: "";
+              position: absolute;
+              top: 0;
+              right: 0;
+              width: 1px;
+              height: 100%;
+              background-color: #828282; }
+        .call-modal .modal-dialog .modal-content .modal-body .phone-number {
+          margin-top: 20px; }
 
   .checkout-cta-section {
     padding: 50px 0; } }
