data table styling

--- a/css/style.css
+++ b/css/style.css
@@ -1975,5 +1975,62 @@ Privacy Policy Page CSS Start
 /** ========================= 
 Privacy Policy Page CSS End 
 ========================= **/
+.gms-table tr th {
+  color: #828282;
+  font-size: 20px;
+  font-weight: 600;
+  border-bottom: 1px solid #BFBFBF !important;
+  position: relative; }
+  .gms-table tr th:last-child {
+    border-right: none; }
+  .gms-table tr th .border-right {
+    position: absolute;
+    display: inline-block;
+    width: 1px;
+    height: 30px;
+    background: #BFBFBF;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%); }
+  .gms-table tr th.unit-details-header {
+    padding-left: 20px; }
+  .gms-table tr th.price-header {
+    padding-left: 20px; }
+.gms-table tr td {
+  vertical-align: middle;
+  position: relative; }
+  .gms-table tr td .border-right {
+    position: absolute;
+    display: inline-block;
+    width: 1px;
+    height: 50px;
+    background: #BFBFBF;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%); }
+  .gms-table tr td.size {
+    color: #828282;
+    font-size: 32px;
+    font-weight: 600; }
+  .gms-table tr td.unit-details {
+    color: #545454;
+    font-size: 16px;
+    font-weight: 400;
+    padding-left: 20px; }
+  .gms-table tr td.price {
+    color: #0601FF;
+    font-size: 32px;
+    font-weight: 600;
+    padding-left: 20px; }
+  .gms-table tr td.button-cell .btn {
+    border-radius: 4px;
+    padding: 20px 60px;
+    display: inline-block;
+    font-size: 20px;
+    font-weight: 700; }
+    .gms-table tr td.button-cell .btn.btn-primary {
+      background-color: #9D9D9D;
+      color: #fff;
+      border: none; }
 
 /*# sourceMappingURL=style.css.map */
