--- a/css/scss/components/_unit-prices.scss
+++ b/css/scss/components/_unit-prices.scss
@@ -118,6 +118,7 @@ Unit Prices Page CSS Start
     padding: 0 30px;
     border: 1px solid $gray-border;
     border-radius: 8px;
+
     .single-unit {
       padding: 20px 0;
       border-bottom: 1px solid $gray-border;
@@ -130,16 +131,6 @@ Unit Prices Page CSS Start
           font-size: 15px;
           font-weight: 400;
         }
-        i {
-          &.icon-left-arrow,
-          &.icon-right-arrow {
-            transform: rotate(270deg);
-            cursor: pointer;
-          }
-          &.icon-right-arrow {
-            margin-left: 5px;
-          }
-        }
       }
 
       h5 {
@@ -151,14 +142,16 @@ Unit Prices Page CSS Start
           color: $blue;
         }
       }
-
-      .call-btn {
-        a {
-          @include btn(20px 50px, 20px, 190px, white, $gray-normal);
-          transition: all 0.3s ease-in;
-          &:hover {
-            background-color: $yellow;
-            color: $black;
+      .button-cell {
+        padding: 30px 0;
+        &.call-btn {
+          a {
+            @include btn(20px 50px, 20px, 190px, white, $gray-normal);
+            transition: all 0.3s ease-in;
+            &:hover {
+              background-color: $yellow;
+              color: $black;
+            }
           }
         }
       }
