--- a/css/style.css
+++ b/css/style.css
@@ -890,11 +890,6 @@ Unit Prices Page CSS Start
       .unit-filter-section .category-details .single-unit p.unit-details {
         font-size: 15px;
         font-weight: 400; }
-      .unit-filter-section .category-details .single-unit p i.icon-left-arrow, .unit-filter-section .category-details .single-unit p i.icon-right-arrow {
-        transform: rotate(270deg);
-        cursor: pointer; }
-      .unit-filter-section .category-details .single-unit p i.icon-right-arrow {
-        margin-left: 5px; }
     .unit-filter-section .category-details .single-unit h5 {
       display: flex;
       justify-content: start;
@@ -904,16 +899,18 @@ Unit Prices Page CSS Start
       color: #828282; }
       .unit-filter-section .category-details .single-unit h5.price {
         color: #0601ff; }
-    .unit-filter-section .category-details .single-unit .call-btn a {
-      padding: 20px 50px;
-      font-size: 20px;
-      min-width: 190px;
-      color: white;
-      background-color: #9d9d9d;
-      transition: all 0.3s ease-in; }
-      .unit-filter-section .category-details .single-unit .call-btn a:hover {
-        background-color: #f3b300;
-        color: #0d0d0d; }
+    .unit-filter-section .category-details .single-unit .button-cell {
+      padding: 30px 0; }
+      .unit-filter-section .category-details .single-unit .button-cell.call-btn a {
+        padding: 20px 50px;
+        font-size: 20px;
+        min-width: 190px;
+        color: white;
+        background-color: #9d9d9d;
+        transition: all 0.3s ease-in; }
+        .unit-filter-section .category-details .single-unit .button-cell.call-btn a:hover {
+          background-color: #f3b300;
+          color: #0d0d0d; }
     .unit-filter-section .category-details .single-unit .store-size,
     .unit-filter-section .category-details .single-unit .store-unit-details,
     .unit-filter-section .category-details .single-unit .unit-price,
@@ -1975,11 +1972,17 @@ Privacy Policy Page CSS Start
 /** ========================= 
 Privacy Policy Page CSS End 
 ========================= **/
+.gms-table tr:last-child {
+  border: 0; }
+  .gms-table tr:last-child td {
+    border: 0; }
+  .gms-table tr:last-child.single-unit {
+    border-bottom: 0; }
 .gms-table tr th {
   color: #828282;
   font-size: 20px;
   font-weight: 600;
-  border-bottom: 1px solid #BFBFBF !important;
+  border-bottom: 1px solid #bfbfbf !important;
   position: relative; }
   .gms-table tr th:last-child {
     border-right: none; }
@@ -1988,7 +1991,7 @@ Privacy Policy Page CSS End
     display: inline-block;
     width: 1px;
     height: 30px;
-    background: #BFBFBF;
+    background: #bfbfbf;
     right: 0;
     top: 50%;
     transform: translateY(-50%); }
@@ -2004,7 +2007,7 @@ Privacy Policy Page CSS End
     display: inline-block;
     width: 1px;
     height: 50px;
-    background: #BFBFBF;
+    background: #bfbfbf;
     right: 0;
     top: 50%;
     transform: translateY(-50%); }
@@ -2018,7 +2021,7 @@ Privacy Policy Page CSS End
     font-weight: 400;
     padding-left: 20px; }
   .gms-table tr td.price {
-    color: #0601FF;
+    color: #0601ff;
     font-size: 32px;
     font-weight: 600;
     padding-left: 20px; }
@@ -2029,8 +2032,20 @@ Privacy Policy Page CSS End
     font-size: 20px;
     font-weight: 700; }
     .gms-table tr td.button-cell .btn.btn-primary {
-      background-color: #9D9D9D;
+      background-color: #9d9d9d;
       color: #fff;
       border: none; }
+.gms-table tr.single-unit th.size, .gms-table tr.single-unit th.price-header {
+  display: flex;
+  align-items: center; }
+  .gms-table tr.single-unit th.size span, .gms-table tr.single-unit th.price-header span {
+    margin-left: 4px;
+    display: flex;
+    align-items: center;
+    gap: 4px; }
+    .gms-table tr.single-unit th.size span i, .gms-table tr.single-unit th.price-header span i {
+      transform: rotate(270deg);
+      cursor: pointer;
+      display: block; }
 
 /*# sourceMappingURL=style.css.map */
