--- a/css/scss/components/_unit-prices.scss
+++ b/css/scss/components/_unit-prices.scss
@@ -529,6 +529,7 @@ Unit Prices Page CSS End
             i {
               font-size: 14px;
             }
+            line-height: 26px;
           }
         }
       }
