--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "icomoon";
-  src: url("../fonts/icomoon.eot?x9vuvh");
-  src: url("../fonts/icomoon.eot?x9vuvh#iefix") format("embedded-opentype"), url("../fonts/icomoon.woff2?x9vuvh") format("woff2"), url("../fonts/icomoon.ttf?x9vuvh") format("truetype"), url("../fonts/icomoon.woff?x9vuvh") format("woff"), url("../fonts/icomoon.svg?x9vuvh#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?8papbk");
+  src: url("../fonts/icomoon.eot?8papbk#iefix") format("embedded-opentype"), url("../fonts/icomoon.woff2?8papbk") format("woff2"), url("../fonts/icomoon.ttf?8papbk") format("truetype"), url("../fonts/icomoon.woff?8papbk") format("woff"), url("../fonts/icomoon.svg?8papbk#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block; }
@@ -39,6 +39,12 @@
 
 .icon-online-pay:before {
   content: "\e917"; }
+
+.icon-top-arrow:before {
+  content: "\e922"; }
+
+.icon-down-arrow:before {
+  content: "\e91d"; }
 
 .icon-delete:before {
   content: "\e91c"; }
